improvements in TS module