@@ -1,5 +1,6 @@
 package org.jeesl.factory.ejb.module.ts;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Date;
 
 import org.jeesl.interfaces.model.module.ts.data.JeeslTsTransaction;
@@ -26,29 +27,25 @@ public class EjbTsTransactionFactory<TRANSACTION extends JeeslTsTransaction<SOUR
 		TRANSACTION ejb = null;
 		try
 		{
-			ejb = cTransaction.newInstance();
+			ejb = cTransaction.getDeclaredConstructor().newInstance();
 			ejb.setUser(user);
 			ejb.setRecord(new Date());
 			ejb.setSource(source);
 		}
 		catch (InstantiationException e) {e.printStackTrace();}
 		catch (IllegalAccessException e) {e.printStackTrace();}
+		catch (IllegalArgumentException e) {e.printStackTrace();}
+		catch (InvocationTargetException e) {e.printStackTrace();}
+		catch (NoSuchMethodException e) {e.printStackTrace();}
+		catch (SecurityException e) {e.printStackTrace();}
 		return ejb;
 	}
 	
 	public TRANSACTION build(USER user, SOURCE source, String reference)
 	{
-		TRANSACTION ejb = null;
-		try
-		{
-			ejb = cTransaction.newInstance();
-			ejb.setUser(user);
-			ejb.setRecord(new Date());
-			ejb.setSource(source);
-			ejb.setReference(reference);
-		}
-		catch (InstantiationException e) {e.printStackTrace();}
-		catch (IllegalAccessException e) {e.printStackTrace();}
+		TRANSACTION ejb = this.build(user, source);
+		ejb.setSource(source);
+		ejb.setReference(reference);
 		return ejb;
 	}
 }
